<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Soojeong Shin
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_news" />
        <item
            android:id="@+id/nav_telangana"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_telangana" />
        <item
            android:id="@+id/nav_india"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_india" />
        <item
            android:id="@+id/nav_polls"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_polls" />
        <item
            android:id="@+id/nav_corruption"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_corruption" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_music" />
        <item
            android:id="@+id/nav_usefull_info"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_useful_info" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_article" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_movies" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_sports" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_business" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_trending" />
        <item
            android:id="@+id/nav_mustwatch"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_must_watch" />
        <item
            android:id="@+id/nav_timepass"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_time_pass" />
        <item
            android:id="@+id/nav_crime"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_crime" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_jobs" />
        <item
            android:id="@+id/nav_corona"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_corona" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_health" />
        <item
            android:id="@+id/nav_women"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_women" />
        <item
            android:id="@+id/nav_devotional"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_devotional" />
        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_politics" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_education" />
        <item
            android:id="@+id/nav_international"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_international" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/ic_title_weather" />
    </group>
</menu>
